@@ -5,14 +5,14 @@
 # Provides:            $local_fs
 # Required-Start:      udev checkfs
 # Should-Start:
-# Required-Stop:       swap
+# Required-Stop:       localnet
 # Should-Stop:
-# Default-Start:       sysinit 0 6
-# Default-Stop:
-# Short-Description:   Mounts and unmounts all local filesystems.
+# Default-Start:       S
+# Default-Stop:        0 6
+# Short-Description:   Mounts/unmounts local filesystems defined in /etc/fstab.
 # Description:         Remounts root filesystem read/write and mounts all
 #                      remaining local filesystems defined in /etc/fstab on
-#                      start.  Rmounts root filesystem read-only and unmounts
+#                      start.  Remounts root filesystem read-only and unmounts
 #                      remaining filesystems on stop.
 # X-LFS-Default-Start: S40
 # X-LFS-Default-Stop:  S70
