@@ -6,9 +6,9 @@
 # Required-Start:
 # Should-Start:
 # Required-Stop:       $local_fs swap localnet
-# Should-Stop:         halt reboot
-# Default-Start:       0 6
-# Default-Stop:
+# Should-Stop:
+# Default-Start:
+# Default-Stop:        0 6
 # Short-Description:   Attempts to kill remaining processes.
 # Description:         Attempts to kill remaining processes.
 # X-LFS-Default-Start:
