@@ -3,12 +3,12 @@
 
 ### BEGIN INIT INFO
 # Provides:            swap
-# Required-Start:      udev
+# Required-Start:      modules
 # Should-Start:
 # Required-Stop:       localnet
-# Should-Stop:         halt reboot
-# Default-Start:       sysinit 0 6
-# Default-Stop:
+# Should-Stop:
+# Default-Start:       S
+# Default-Stop:        0 6
 # Short-Description:   Mounts and unmounts swap partitions.
 # Description:         Mounts and unmounts swap partitions defined in 
 #                      /etc/fstab.
